@@ -4,8 +4,10 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.ConnectException;
+import java.net.InetAddress;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -13,26 +15,46 @@ import java.security.Key;
 import java.security.KeyStore;
 import java.security.PrivateKey;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Base64;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.OptionalInt;
+import java.util.Set;
+import java.util.concurrent.Callable;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
+import javax.crypto.KeyGenerator;
 import javax.crypto.SecretKey;
 
 import org.jboss.logging.Logger;
 
+import io.quarkus.arc.Arc;
+import io.quarkus.arc.ArcContainer;
+import io.quarkus.arc.ClientProxy;
 import io.quarkus.credentials.CredentialsProvider;
 import io.quarkus.credentials.runtime.CredentialsProviderFinder;
-import io.quarkus.oidc.common.runtime.OidcCommonConfig.Credentials;
-import io.quarkus.oidc.common.runtime.OidcCommonConfig.Credentials.Provider;
-import io.quarkus.oidc.common.runtime.OidcCommonConfig.Credentials.Secret;
+import io.quarkus.oidc.common.OidcEndpoint;
+import io.quarkus.oidc.common.OidcEndpoint.Type;
+import io.quarkus.oidc.common.OidcRequestContextProperties;
+import io.quarkus.oidc.common.OidcRequestFilter;
+import io.quarkus.oidc.common.OidcRequestFilter.OidcRequestContext;
+import io.quarkus.oidc.common.OidcResponseFilter;
+import io.quarkus.oidc.common.OidcResponseFilter.OidcResponseContext;
+import io.quarkus.oidc.common.runtime.OidcClientCommonConfig.Credentials;
+import io.quarkus.oidc.common.runtime.OidcClientCommonConfig.Credentials.Provider;
+import io.quarkus.oidc.common.runtime.OidcClientCommonConfig.Credentials.Secret;
 import io.quarkus.oidc.common.runtime.OidcCommonConfig.Tls.Verification;
-import io.quarkus.runtime.TlsConfig;
+import io.quarkus.oidc.common.runtime.OidcTlsSupport.TlsConfigSupport;
 import io.quarkus.runtime.configuration.ConfigurationException;
 import io.quarkus.runtime.util.ClassPathUtils;
+import io.quarkus.tls.runtime.config.TlsConfigUtils;
 import io.smallrye.jwt.algorithm.SignatureAlgorithm;
 import io.smallrye.jwt.build.Jwt;
 import io.smallrye.jwt.build.JwtSignatureBuilder;
@@ -44,7 +66,10 @@ import io.vertx.core.json.JsonObject;
 import io.vertx.core.net.KeyStoreOptions;
 import io.vertx.core.net.ProxyOptions;
 import io.vertx.mutiny.core.MultiMap;
+import io.vertx.mutiny.core.Vertx;
 import io.vertx.mutiny.core.buffer.Buffer;
+import io.vertx.mutiny.ext.web.client.HttpRequest;
+import io.vertx.mutiny.ext.web.client.HttpResponse;
 import io.vertx.mutiny.ext.web.client.WebClient;
 
 public class OidcCommonUtils {
@@ -70,7 +95,7 @@ public class OidcCommonUtils {
         }
     }
 
-    public static void verifyCommonConfiguration(OidcCommonConfig oidcConfig, boolean clientIdOptional,
+    public static void verifyCommonConfiguration(OidcClientCommonConfig oidcConfig, boolean clientIdOptional,
             boolean isServerConfig) {
         final String configPrefix = isServerConfig ? "quarkus.oidc." : "quarkus.oidc-client.";
         if (!clientIdOptional && !oidcConfig.getClientId().isPresent()) {
@@ -112,59 +137,15 @@ public class OidcCommonUtils {
 
     public static String urlEncode(String value) {
         try {
-            return URLEncoder.encode(value, StandardCharsets.UTF_8.name());
+            return URLEncoder.encode(value, StandardCharsets.UTF_8);
         } catch (Exception ex) {
             throw new RuntimeException(ex);
         }
     }
 
-    public static void setHttpClientOptions(OidcCommonConfig oidcConfig, TlsConfig tlsConfig, HttpClientOptions options) {
-        boolean trustAll = oidcConfig.tls.verification.isPresent() ? oidcConfig.tls.verification.get() == Verification.NONE
-                : tlsConfig.trustAll;
-        if (trustAll) {
-            options.setTrustAll(true);
-            options.setVerifyHost(false);
-        } else if (oidcConfig.tls.trustStoreFile.isPresent()) {
-            try {
-                byte[] trustStoreData = getFileContent(oidcConfig.tls.trustStoreFile.get());
-                io.vertx.core.net.KeyStoreOptions trustStoreOptions = new KeyStoreOptions()
-                        .setPassword(oidcConfig.tls.getTrustStorePassword().orElse("password"))
-                        .setAlias(oidcConfig.tls.getTrustStoreCertAlias().orElse(null))
-                        .setValue(io.vertx.core.buffer.Buffer.buffer(trustStoreData))
-                        .setType(getStoreType(oidcConfig.tls.trustStoreFileType, oidcConfig.tls.trustStoreFile.get()))
-                        .setProvider(oidcConfig.tls.trustStoreProvider.orElse(null));
-                options.setTrustOptions(trustStoreOptions);
-                if (Verification.CERTIFICATE_VALIDATION == oidcConfig.tls.verification.orElse(Verification.REQUIRED)) {
-                    options.setVerifyHost(false);
-                }
-            } catch (IOException ex) {
-                throw new ConfigurationException(String.format(
-                        "OIDC truststore file does not exist or can not be read",
-                        oidcConfig.tls.trustStoreFile.get().toString()), ex);
-            }
-        }
-        if (oidcConfig.tls.keyStoreFile.isPresent()) {
-            try {
-                byte[] keyStoreData = getFileContent(oidcConfig.tls.keyStoreFile.get());
-                io.vertx.core.net.KeyStoreOptions keyStoreOptions = new KeyStoreOptions()
-                        .setAlias(oidcConfig.tls.keyStoreKeyAlias.orElse(null))
-                        .setAliasPassword(oidcConfig.tls.keyStoreKeyPassword.orElse(null))
-                        .setValue(io.vertx.core.buffer.Buffer.buffer(keyStoreData))
-                        .setType(getStoreType(oidcConfig.tls.keyStoreFileType, oidcConfig.tls.keyStoreFile.get()))
-                        .setProvider(oidcConfig.tls.keyStoreProvider.orElse(null));
+    public static void setHttpClientOptions(OidcCommonConfig oidcConfig, HttpClientOptions options,
+            TlsConfigSupport tlsSupport) {
 
-                if (oidcConfig.tls.keyStorePassword.isPresent()) {
-                    keyStoreOptions.setPassword(oidcConfig.tls.keyStorePassword.get());
-                }
-
-                options.setKeyCertOptions(keyStoreOptions);
-
-            } catch (IOException ex) {
-                throw new ConfigurationException(String.format(
-                        "OIDC keystore file does not exist or can not be read",
-                        oidcConfig.tls.keyStoreFile.get().toString()), ex);
-            }
-        }
         Optional<ProxyOptions> proxyOpt = toProxyOptions(oidcConfig.getProxy());
         if (proxyOpt.isPresent()) {
             options.setProxyOptions(proxyOpt.get());
@@ -176,13 +157,68 @@ public class OidcCommonUtils {
         }
 
         options.setConnectTimeout((int) oidcConfig.getConnectionTimeout().toMillis());
+
+        if (tlsSupport.useTlsRegistry()) {
+            TlsConfigUtils.configure(options, tlsSupport.getTlsConfig());
+            return;
+        }
+
+        boolean trustAll = oidcConfig.tls.verification.isPresent() ? oidcConfig.tls.verification.get() == Verification.NONE
+                : tlsSupport.isGlobalTrustAll();
+        if (trustAll) {
+            options.setTrustAll(true);
+            options.setVerifyHost(false);
+        } else if (oidcConfig.tls.trustStoreFile.isPresent()) {
+            try {
+                byte[] trustStoreData = getFileContent(oidcConfig.tls.trustStoreFile.get());
+                io.vertx.core.net.KeyStoreOptions trustStoreOptions = new KeyStoreOptions()
+                        .setPassword(oidcConfig.tls.getTrustStorePassword().orElse("password"))
+                        .setAlias(oidcConfig.tls.getTrustStoreCertAlias().orElse(null))
+                        .setValue(io.vertx.core.buffer.Buffer.buffer(trustStoreData))
+                        .setType(getKeyStoreType(oidcConfig.tls.trustStoreFileType, oidcConfig.tls.trustStoreFile.get()))
+                        .setProvider(oidcConfig.tls.trustStoreProvider.orElse(null));
+                options.setTrustOptions(trustStoreOptions);
+                if (Verification.CERTIFICATE_VALIDATION == oidcConfig.tls.verification.orElse(Verification.REQUIRED)) {
+                    options.setVerifyHost(false);
+                }
+            } catch (IOException ex) {
+                throw new ConfigurationException(String.format(
+                        "OIDC truststore file %s does not exist or can not be read",
+                        oidcConfig.tls.trustStoreFile.get()), ex);
+            }
+        }
+        if (oidcConfig.tls.keyStoreFile.isPresent()) {
+            try {
+                byte[] keyStoreData = getFileContent(oidcConfig.tls.keyStoreFile.get());
+                io.vertx.core.net.KeyStoreOptions keyStoreOptions = new KeyStoreOptions()
+                        .setAlias(oidcConfig.tls.keyStoreKeyAlias.orElse(null))
+                        .setAliasPassword(oidcConfig.tls.keyStoreKeyPassword.orElse(null))
+                        .setValue(io.vertx.core.buffer.Buffer.buffer(keyStoreData))
+                        .setType(getKeyStoreType(oidcConfig.tls.keyStoreFileType, oidcConfig.tls.keyStoreFile.get()))
+                        .setProvider(oidcConfig.tls.keyStoreProvider.orElse(null));
+
+                if (oidcConfig.tls.keyStorePassword.isPresent()) {
+                    keyStoreOptions.setPassword(oidcConfig.tls.keyStorePassword.get());
+                }
+
+                options.setKeyCertOptions(keyStoreOptions);
+
+            } catch (IOException ex) {
+                throw new ConfigurationException(String.format(
+                        "OIDC keystore file %s does not exist or can not be read",
+                        oidcConfig.tls.keyStoreFile.get()), ex);
+            }
+        }
     }
 
-    private static String getStoreType(Optional<String> fileType, Path storePath) {
+    public static String getKeyStoreType(Optional<String> fileType, Path storePath) {
         if (fileType.isPresent()) {
             return fileType.get().toUpperCase();
         }
-        final String pathName = storePath.toString();
+        return inferKeyStoreTypeFromFileExtension(storePath.toString());
+    }
+
+    private static String inferKeyStoreTypeFromFileExtension(String pathName) {
         if (pathName.endsWith(".p12") || pathName.endsWith(".pkcs12") || pathName.endsWith(".pfx")) {
             return "PKCS12";
         } else {
@@ -262,9 +298,30 @@ public class OidcCommonUtils {
                         && clientSecretMethod(creds) == Secret.Method.BASIC);
     }
 
-    public static boolean isClientJwtAuthRequired(Credentials creds) {
-        return creds.jwt.secret.isPresent() || creds.jwt.secretProvider.key.isPresent() || creds.jwt.keyFile.isPresent()
-                || creds.jwt.keyStoreFile.isPresent();
+    public static boolean isClientJwtAuthRequired(Credentials creds, boolean server) {
+        Set<String> props = new HashSet<>();
+        if (creds.jwt.secret.isPresent()) {
+            props.add(".credentials.jwt.secret");
+        }
+        if (creds.jwt.secretProvider.key.isPresent()) {
+            props.add(".credentials.jwt.secret-provider.key");
+        }
+        if (creds.jwt.key.isPresent()) {
+            props.add(".credentials.jwt.key");
+        }
+        if (creds.jwt.keyFile.isPresent()) {
+            props.add(".credentials.jwt.key-file");
+        }
+        if (creds.jwt.keyStoreFile.isPresent()) {
+            props.add(".credentials.jwt.key-store-file");
+        }
+        if (props.size() > 1) {
+            final String prefix = server ? "quarkus.oidc" : "quarkus.oidc-client";
+            throw new ConfigurationException("""
+                    Only a single OIDC JWT credential key property can be configured, but you have configured: %s"""
+                    .formatted(props.stream().map(p -> (prefix + p)).collect(Collectors.joining(","))));
+        }
+        return props.size() == 1;
     }
 
     public static boolean isClientSecretPostAuthRequired(Credentials creds) {
@@ -273,7 +330,11 @@ public class OidcCommonUtils {
     }
 
     public static boolean isClientSecretPostJwtAuthRequired(Credentials creds) {
-        return clientSecretMethod(creds) == Secret.Method.POST_JWT && isClientJwtAuthRequired(creds);
+        return clientSecretMethod(creds) == Secret.Method.POST_JWT;
+    }
+
+    public static boolean isJwtAssertion(Credentials creds) {
+        return creds.getJwt().isAssertion();
     }
 
     public static String clientSecret(Credentials creds) {
@@ -282,6 +343,23 @@ public class OidcCommonUtils {
 
     public static String jwtSecret(Credentials creds) {
         return creds.jwt.secret.orElseGet(fromCredentialsProvider(creds.jwt.secretProvider));
+    }
+
+    public static String getClientOrJwtSecret(Credentials creds) {
+        LOG.debug("Trying to get the configured client secret");
+        String encSecret = clientSecret(creds);
+        if (encSecret == null) {
+            LOG.debug("Client secret is not configured, "
+                    + "trying to get the configured 'client_jwt_secret' secret");
+            encSecret = jwtSecret(creds);
+        }
+        return encSecret;
+    }
+
+    public static SecretKey generateSecretKey() throws Exception {
+        KeyGenerator keyGenerator = KeyGenerator.getInstance("AES");
+        keyGenerator.init(256);
+        return keyGenerator.generateKey();
     }
 
     public static Secret.Method clientSecretMethod(Credentials creds) {
@@ -295,10 +373,9 @@ public class OidcCommonUtils {
             public String get() {
                 if (provider.key.isPresent()) {
                     String providerName = provider.name.orElse(null);
+                    String keyringName = provider.keyringName.orElse(null);
                     CredentialsProvider credentialsProvider = CredentialsProviderFinder.find(providerName);
-                    if (credentialsProvider != null) {
-                        return credentialsProvider.getCredentials(providerName).get(provider.key.get());
-                    }
+                    return credentialsProvider.getCredentials(keyringName).get(provider.key.get());
                 }
                 return null;
             }
@@ -312,12 +389,16 @@ public class OidcCommonUtils {
         } else {
             Key key = null;
             try {
-                if (creds.jwt.getKeyFile().isPresent()) {
+                if (creds.jwt.getKey().isPresent()) {
+                    key = KeyUtils.tryAsPemSigningPrivateKey(creds.jwt.getKey().get(),
+                            getSignatureAlgorithm(creds, SignatureAlgorithm.RS256));
+                } else if (creds.jwt.getKeyFile().isPresent()) {
                     key = KeyUtils.readSigningKey(creds.jwt.getKeyFile().get(), creds.jwt.keyId.orElse(null),
                             getSignatureAlgorithm(creds, SignatureAlgorithm.RS256));
                 } else if (creds.jwt.keyStoreFile.isPresent()) {
-                    KeyStore ks = KeyStore.getInstance("JKS");
-                    InputStream is = ResourceUtils.getResourceStream(creds.jwt.keyStoreFile.get());
+                    var keyStoreFile = creds.jwt.keyStoreFile.get();
+                    KeyStore ks = KeyStore.getInstance(inferKeyStoreTypeFromFileExtension(keyStoreFile));
+                    InputStream is = ResourceUtils.getResourceStream(keyStoreFile);
 
                     if (creds.jwt.keyStorePassword.isPresent()) {
                         ks.load(is, creds.jwt.keyStorePassword.get().toCharArray());
@@ -342,29 +423,34 @@ public class OidcCommonUtils {
         }
     }
 
-    public static String signJwtWithKey(OidcCommonConfig oidcConfig, String tokenRequestUri, Key key) {
+    public static String signJwtWithKey(OidcClientCommonConfig oidcConfig, String tokenRequestUri, Key key) {
         // 'jti' and 'iat' claims are created by default, 'iat' - is set to the current time
-        JwtSignatureBuilder builder = Jwt
+        JwtSignatureBuilder jwtSignatureBuilder = Jwt
+                .claims(additionalClaims(oidcConfig.credentials.jwt.getClaims()))
                 .issuer(oidcConfig.credentials.jwt.issuer.orElse(oidcConfig.clientId.get()))
                 .subject(oidcConfig.credentials.jwt.subject.orElse(oidcConfig.clientId.get()))
                 .audience(oidcConfig.credentials.jwt.getAudience().isPresent()
                         ? removeLastPathSeparator(oidcConfig.credentials.jwt.getAudience().get())
                         : tokenRequestUri)
-                .expiresIn(oidcConfig.credentials.jwt.lifespan)
-                .jws();
+                .expiresIn(oidcConfig.credentials.jwt.lifespan).jws();
         if (oidcConfig.credentials.jwt.getTokenKeyId().isPresent()) {
-            builder.keyId(oidcConfig.credentials.jwt.getTokenKeyId().get());
+            jwtSignatureBuilder.keyId(oidcConfig.credentials.jwt.getTokenKeyId().get());
         }
         SignatureAlgorithm signatureAlgorithm = getSignatureAlgorithm(oidcConfig.credentials, null);
         if (signatureAlgorithm != null) {
-            builder.algorithm(signatureAlgorithm);
+            jwtSignatureBuilder.algorithm(signatureAlgorithm);
         }
 
         if (key instanceof SecretKey) {
-            return builder.sign((SecretKey) key);
+            return jwtSignatureBuilder.sign((SecretKey) key);
         } else {
-            return builder.sign((PrivateKey) key);
+            return jwtSignatureBuilder.sign((PrivateKey) key);
         }
+    }
+
+    @SuppressWarnings({ "unchecked", "rawtypes" })
+    private static Map<String, Object> additionalClaims(Map<String, String> claims) {
+        return (Map) claims;
     }
 
     private static SignatureAlgorithm getSignatureAlgorithm(Credentials credentials, SignatureAlgorithm defaultAlgorithm) {
@@ -390,7 +476,7 @@ public class OidcCommonUtils {
 
     }
 
-    public static String initClientSecretBasicAuth(OidcCommonConfig oidcConfig) {
+    public static String initClientSecretBasicAuth(OidcClientCommonConfig oidcConfig) {
         if (isClientSecretBasicAuthRequired(oidcConfig.credentials)) {
             return basicSchemeValue(oidcConfig.getClientId().get(), clientSecret(oidcConfig.credentials));
         }
@@ -403,8 +489,8 @@ public class OidcCommonUtils {
 
     }
 
-    public static Key initClientJwtKey(OidcCommonConfig oidcConfig) {
-        if (isClientJwtAuthRequired(oidcConfig.credentials)) {
+    public static Key initClientJwtKey(OidcClientCommonConfig oidcConfig, boolean server) {
+        if (isClientJwtAuthRequired(oidcConfig.credentials, server)) {
             return clientJwtKey(oidcConfig.credentials);
         }
         return null;
@@ -415,13 +501,36 @@ public class OidcCommonUtils {
                 || (t instanceof OidcEndpointAccessException && ((OidcEndpointAccessException) t).getErrorStatus() == 404));
     }
 
-    public static Uni<JsonObject> discoverMetadata(WebClient client, String authServerUrl, long connectionDelayInMillisecs) {
-        final String discoveryUrl = authServerUrl + OidcConstants.WELL_KNOWN_CONFIGURATION;
-        return client.getAbs(discoveryUrl).send().onItem().transform(resp -> {
+    public static Uni<JsonObject> discoverMetadata(WebClient client,
+            Map<OidcEndpoint.Type, List<OidcRequestFilter>> requestFilters,
+            OidcRequestContextProperties contextProperties, Map<OidcEndpoint.Type, List<OidcResponseFilter>> responseFilters,
+            String authServerUrl,
+            long connectionDelayInMillisecs, Vertx vertx, boolean blockingDnsLookup) {
+        final String discoveryUrl = getDiscoveryUri(authServerUrl);
+        HttpRequest<Buffer> request = client.getAbs(discoveryUrl);
+        final OidcRequestContextProperties requestProps = requestFilters.isEmpty() ? null
+                : getDiscoveryRequestProps(contextProperties, discoveryUrl);
+        if (!requestFilters.isEmpty()) {
+            OidcRequestContext context = new OidcRequestContext(request, null, requestProps);
+            for (OidcRequestFilter filter : getMatchingOidcRequestFilters(requestFilters, OidcEndpoint.Type.DISCOVERY)) {
+                filter.filter(context);
+            }
+        }
+        return sendRequest(vertx, request, blockingDnsLookup).onItem().transform(resp -> {
+
+            Buffer buffer = resp.body();
+            filterHttpResponse(requestProps, resp, buffer, responseFilters, OidcEndpoint.Type.DISCOVERY);
+
             if (resp.statusCode() == 200) {
-                return resp.bodyAsJsonObject();
+                return buffer.toJsonObject();
             } else {
-                LOG.warnf("Discovery has failed, status code: %d", resp.statusCode());
+                String errorMessage = buffer.toString();
+                if (errorMessage != null && !errorMessage.isEmpty()) {
+                    LOG.warnf("Discovery request %s has failed, status code: %d, error message: %s", discoveryUrl,
+                            resp.statusCode(), errorMessage);
+                } else {
+                    LOG.warnf("Discovery request %s has failed, status code: %d", discoveryUrl, resp.statusCode());
+                }
                 throw new OidcEndpointAccessException(resp.statusCode());
             }
         }).onFailure(oidcEndpointNotAvailable())
@@ -433,6 +542,29 @@ public class OidcCommonUtils {
                     // don't wrap it to avoid information leak
                     return new RuntimeException("OIDC Server is not available");
                 });
+    }
+
+    private static OidcRequestContextProperties getDiscoveryRequestProps(
+            OidcRequestContextProperties contextProperties, String discoveryUrl) {
+        Map<String, Object> newProperties = contextProperties == null ? new HashMap<>()
+                : new HashMap<>(contextProperties.getAll());
+        newProperties.put(OidcRequestContextProperties.DISCOVERY_ENDPOINT, discoveryUrl);
+        return new OidcRequestContextProperties(newProperties);
+    }
+
+    public static void filterHttpResponse(OidcRequestContextProperties requestProps,
+            HttpResponse<Buffer> resp, Buffer buffer,
+            Map<Type, List<OidcResponseFilter>> responseFilters, OidcEndpoint.Type type) {
+        if (!responseFilters.isEmpty()) {
+            OidcResponseContext context = new OidcResponseContext(requestProps, resp.statusCode(), resp.headers(), buffer);
+            for (OidcResponseFilter filter : getMatchingOidcResponseFilters(responseFilters, type)) {
+                filter.filter(context);
+            }
+        }
+    }
+
+    public static String getDiscoveryUri(String authServerUrl) {
+        return authServerUrl + OidcConstants.WELL_KNOWN_CONFIGURATION;
     }
 
     private static byte[] getFileContent(Path path) throws IOException {
@@ -459,5 +591,96 @@ public class OidcCommonUtils {
             out.write(buf, 0, r);
         }
         return out.toByteArray();
+    }
+
+    public static Map<OidcEndpoint.Type, List<OidcRequestFilter>> getOidcRequestFilters() {
+        return getOidcFilters(OidcRequestFilter.class);
+    }
+
+    public static Map<OidcEndpoint.Type, List<OidcResponseFilter>> getOidcResponseFilters() {
+        return getOidcFilters(OidcResponseFilter.class);
+    }
+
+    private static <T> Map<OidcEndpoint.Type, List<T>> getOidcFilters(Class<T> filterClass) {
+        ArcContainer container = Arc.container();
+        if (container != null) {
+            Map<OidcEndpoint.Type, List<T>> map = new HashMap<>();
+            for (T filter : container.listAll(filterClass).stream().map(handle -> handle.get())
+                    .collect(Collectors.toList())) {
+                OidcEndpoint endpoint = ClientProxy.unwrap(filter).getClass().getAnnotation(OidcEndpoint.class);
+                if (endpoint != null) {
+                    for (OidcEndpoint.Type type : endpoint.value()) {
+                        map.computeIfAbsent(type, k -> new ArrayList<T>()).add(filter);
+                    }
+                } else {
+                    map.computeIfAbsent(OidcEndpoint.Type.ALL, k -> new ArrayList<T>()).add(filter);
+                }
+            }
+            return map;
+        }
+        return Map.of();
+    }
+
+    public static List<OidcRequestFilter> getMatchingOidcRequestFilters(Map<OidcEndpoint.Type, List<OidcRequestFilter>> filters,
+            OidcEndpoint.Type type) {
+        return getMatchingOidcFilters(filters, type);
+    }
+
+    public static List<OidcResponseFilter> getMatchingOidcResponseFilters(
+            Map<OidcEndpoint.Type, List<OidcResponseFilter>> filters,
+            OidcEndpoint.Type type) {
+        return getMatchingOidcFilters(filters, type);
+    }
+
+    private static <T> List<T> getMatchingOidcFilters(Map<OidcEndpoint.Type, List<T>> filters,
+            OidcEndpoint.Type type) {
+        List<T> typeSpecific = filters.get(type);
+        List<T> all = filters.get(OidcEndpoint.Type.ALL);
+        if (typeSpecific == null && all == null) {
+            return List.of();
+        }
+        if (typeSpecific != null && all == null) {
+            return typeSpecific;
+        } else if (typeSpecific == null && all != null) {
+            return all;
+        } else {
+            List<T> combined = new ArrayList<>(typeSpecific.size() + all.size());
+            combined.addAll(typeSpecific);
+            combined.addAll(all);
+            return combined;
+        }
+    }
+
+    public static Uni<HttpResponse<Buffer>> sendRequest(io.vertx.core.Vertx vertx, HttpRequest<Buffer> request,
+            boolean blockingDnsLookup) {
+        if (blockingDnsLookup) {
+            return sendRequest(new Vertx(vertx), request, true);
+        } else {
+            return request.send();
+        }
+    }
+
+    public static Uni<HttpResponse<Buffer>> sendRequest(Vertx vertx, HttpRequest<Buffer> request, boolean blockingDnsLookup) {
+        if (blockingDnsLookup) {
+            return vertx.executeBlocking(new Callable<Void>() {
+                @Override
+                public Void call() {
+                    try {
+                        // cache DNS lookup
+                        InetAddress.getByName(request.host());
+                    } catch (UnknownHostException e) {
+                        throw new RuntimeException(e);
+                    }
+                    return null;
+                }
+            }).flatMap(new Function<Void, Uni<? extends HttpResponse<Buffer>>>() {
+                @Override
+                public Uni<? extends HttpResponse<Buffer>> apply(Void unused) {
+                    return request.send();
+                }
+            });
+        } else {
+            return request.send();
+        }
     }
 }
