@@ -18,7 +18,6 @@ import java.util.Collections;
 import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -33,7 +32,6 @@ import org.jboss.jandex.AnnotationInstance;
 import org.jboss.jandex.AnnotationTarget;
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.DotName;
-import org.jboss.jandex.FieldInfo;
 import org.jboss.jandex.IndexView;
 import org.jboss.jandex.MethodInfo;
 import org.jboss.jandex.Type;
@@ -44,29 +42,20 @@ import org.jboss.resteasy.reactive.common.processor.ResteasyReactiveDotNames;
 
 public class ResteasyReactiveScanner {
 
-    public static final Map<DotName, String> BUILTIN_HTTP_ANNOTATIONS_TO_METHOD;
-    public static final Map<String, DotName> METHOD_TO_BUILTIN_HTTP_ANNOTATIONS;
-
-    static {
-        Map<DotName, String> map = new HashMap<>();
-        Map<String, DotName> reverseMap = new HashMap<>();
-        map.put(GET, "GET");
-        reverseMap.put("GET", GET);
-        map.put(POST, "POST");
-        reverseMap.put("POST", POST);
-        map.put(HEAD, "HEAD");
-        reverseMap.put("HEAD", HEAD);
-        map.put(PUT, "PUT");
-        reverseMap.put("PUT", PUT);
-        map.put(DELETE, "DELETE");
-        reverseMap.put("DELETE", DELETE);
-        map.put(PATCH, "PATCH");
-        reverseMap.put("PATCH", PATCH);
-        map.put(OPTIONS, "OPTIONS");
-        reverseMap.put("OPTIONS", OPTIONS);
-        BUILTIN_HTTP_ANNOTATIONS_TO_METHOD = Collections.unmodifiableMap(map);
-        METHOD_TO_BUILTIN_HTTP_ANNOTATIONS = Collections.unmodifiableMap(reverseMap);
-    }
+    public static final Map<DotName, String> BUILTIN_HTTP_ANNOTATIONS_TO_METHOD = Map.of(GET, "GET",
+            POST, "POST",
+            HEAD, "HEAD",
+            PUT, "PUT",
+            DELETE, "DELETE",
+            PATCH, "PATCH",
+            OPTIONS, "OPTIONS");
+    public static final Map<String, DotName> METHOD_TO_BUILTIN_HTTP_ANNOTATIONS = Map.of("GET", GET,
+            "POST", POST,
+            "HEAD", HEAD,
+            "PUT", PUT,
+            "DELETE", DELETE,
+            "PATCH", PATCH,
+            "OPTIONS", OPTIONS);
 
     public static ApplicationScanningResult scanForApplicationClass(IndexView index, Set<String> excludedClasses) {
         Collection<ClassInfo> applications = index
@@ -262,8 +251,24 @@ public class ResteasyReactiveScanner {
             }
         }
 
+        // handle abstract classes
+        var abstractClasses = scannedResources.values().stream().filter(ClassInfo::isAbstract).toList();
+        abstractClasses.forEach(abstractScannedResource -> {
+            Collection<ClassInfo> allSubclasses = index.getAllKnownSubclasses(abstractScannedResource.name());
+            if (allSubclasses.size() != 1) {
+                return; // don't do anything with this case as it's not evident how it's supposed to be handled
+            }
+            ClassInfo subclass = allSubclasses.iterator().next();
+            if (!scannedResources.containsKey(subclass.name())) {
+                scannedResources.put(subclass.name(), subclass);
+                scannedResources.remove(abstractScannedResource.name());
+                scannedResourcePaths.put(subclass.name(), scannedResourcePaths.get(abstractScannedResource.name()));
+                scannedResourcePaths.remove(abstractScannedResource.name());
+            }
+        });
+
         Map<DotName, String> clientInterfaces = new HashMap<>(pathInterfaces);
-        // for clients it is enough to have @PATH annotations on methods only
+        // for clients, it is enough to have @PATH annotations on methods only
         for (DotName interfaceName : interfacesWithPathOnMethods) {
             if (!clientInterfaces.containsKey(interfaceName)) {
                 clientInterfaces.put(interfaceName, "");
@@ -284,6 +289,18 @@ public class ResteasyReactiveScanner {
                         if (!scannedResources.containsKey(clazz.name())) {
                             scannedResources.put(clazz.name(), clazz);
                             scannedResourcePaths.put(clazz.name(), i.getValue());
+
+                            // check for server exception mapper method in implementation class of the interface.
+                            List<AnnotationInstance> exceptionMapperAnnotationInstances = clazz.annotationsMap()
+                                    .get(ResteasyReactiveDotNames.SERVER_EXCEPTION_MAPPER);
+                            if (exceptionMapperAnnotationInstances != null) {
+                                for (AnnotationInstance instance : exceptionMapperAnnotationInstances) {
+                                    if (instance.target().kind() != AnnotationTarget.Kind.METHOD) {
+                                        continue;
+                                    }
+                                    methodExceptionMappers.add(instance.target().asMethod());
+                                }
+                            }
                         }
                     }
                 }
@@ -299,7 +316,7 @@ public class ResteasyReactiveScanner {
             httpAnnotationToMethod.put(httpMethodInstance.target().asClass().name(), httpMethodInstance.value().asString());
         }
 
-        // for clients it is also enough to only have @GET, @POST, etc on methods and no PATH whatsoever
+        // for clients, it is also enough to only have @GET, @POST, etc on methods and no PATH whatsoever
         Set<DotName> methodAnnotations = httpAnnotationToMethod.keySet();
         for (DotName methodAnnotation : methodAnnotations) {
             for (AnnotationInstance methodAnnotationInstance : index.getAnnotations(methodAnnotation)) {
@@ -307,7 +324,7 @@ public class ResteasyReactiveScanner {
                     MethodInfo annotatedMethod = methodAnnotationInstance.target().asMethod();
                     ClassInfo classWithJaxrsMethod = annotatedMethod.declaringClass();
                     if (Modifier.isAbstract(annotatedMethod.flags())
-                            && Modifier.isAbstract(classWithJaxrsMethod.flags())
+                            && Modifier.isInterface(classWithJaxrsMethod.flags())
                             && !clientInterfaces.containsKey(classWithJaxrsMethod.name())) {
                         clientInterfaces.put(classWithJaxrsMethod.name(), "");
                     }
@@ -343,65 +360,14 @@ public class ResteasyReactiveScanner {
                 continue;
             }
             possibleSubResources.put(classInfo.name(), classInfo);
-            //we need to also look for all sub classes and interfaces
+            //we need to also look for all subclasses and interfaces
             //they may have type variables that need to be handled
             toScan.addAll(index.getKnownDirectImplementors(classInfo.name()));
             toScan.addAll(index.getKnownDirectSubclasses(classInfo.name()));
         }
 
-        Set<String> beanParams = new HashSet<>();
-
-        Set<ClassInfo> beanParamAsBeanUsers = new HashSet<>(scannedResources.values());
-        beanParamAsBeanUsers.addAll(possibleSubResources.values());
-
-        Collection<AnnotationInstance> unregisteredBeanParamAnnotations = new ArrayList<>(
-                index.getAnnotations(ResteasyReactiveDotNames.BEAN_PARAM));
-        boolean newBeanParamsRegistered;
-        do {
-            newBeanParamsRegistered = false;
-            for (Iterator<AnnotationInstance> iterator = unregisteredBeanParamAnnotations.iterator(); iterator.hasNext();) {
-                AnnotationInstance beanParamAnnotation = iterator.next();
-                AnnotationTarget target = beanParamAnnotation.target();
-                // FIXME: this isn't right wrt generics
-                switch (target.kind()) {
-                    case FIELD:
-                        FieldInfo field = target.asField();
-                        ClassInfo beanParamDeclaringClass = field.declaringClass();
-                        if (beanParamAsBeanUsers.contains(beanParamDeclaringClass)
-                                || beanParams.contains(beanParamDeclaringClass.name().toString())) {
-                            newBeanParamsRegistered |= beanParams.add(field.type().name().toString());
-                            iterator.remove();
-                        }
-                        break;
-                    case METHOD:
-                        MethodInfo setterMethod = target.asMethod();
-                        if (beanParamAsBeanUsers.contains(setterMethod.declaringClass())
-                                || beanParams.contains(setterMethod.declaringClass().name().toString())) {
-                            Type setterParamType = setterMethod.parameterType(0);
-
-                            newBeanParamsRegistered |= beanParams.add(setterParamType.name().toString());
-                            iterator.remove();
-                        }
-                        break;
-                    case METHOD_PARAMETER:
-                        MethodInfo method = target.asMethodParameter().method();
-                        if (beanParamAsBeanUsers.contains(method.declaringClass())
-                                || beanParams.contains(method.declaringClass().name().toString())) {
-                            int paramIndex = target.asMethodParameter().position();
-                            Type paramType = method.parameterType(paramIndex);
-                            newBeanParamsRegistered |= beanParams.add(paramType.name().toString());
-                            iterator.remove();
-                        }
-                        break;
-                    default:
-                        break;
-                }
-            }
-        } while (newBeanParamsRegistered);
-
         return new ResourceScanningResult(index, scannedResources,
                 scannedResourcePaths, possibleSubResources, pathInterfaces, clientInterfaces, resourcesThatNeedCustomProducer,
-                beanParams,
                 httpAnnotationToMethod, methodExceptionMappers);
     }
 
